--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <div id="contact-form">
             <form method="POST" target="_blank"action="https://formspree.io/f/manjvobg">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="email@email.com" required>
+                <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
                 <button type="submit">Send</button>
             </form>
