--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
         <ul id="menu" class="shadow">
-            <li>
+<li><!-- in your nav -->
+<nav>
+  <a href="#top">Home</a>
+</nav>
+
+<!-- at the very top of the body -->
+<body id="top">
+  <!-- page content -->
+</body>
+</li>           <li>
                 <a href="#about">About</a>
             </li>
             <li>
