--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Loganathan Naresh</h1>
+            <h1>Hello,  I'm Naresh</h1>
             <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -80,7 +80,10 @@
   <script>
     const prefix = "I’m ";
     const words = [
-      "IT Administrator & Support Technician",
+      "IT Administrator",
+      "Support Technician",
+"Remote Troubleshooter",
+"Freelancer",
       "Network Specialist",
       "Security Analyst"
     ];
