--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
   <script>
     const prefix = "I’m ";
     const words = [
+      "Digital Designer",
       "IT Administrator",
-      "Support Technician",
 "Remote Troubleshooter",
 "Freelancer",
-      "Network Specialist",
+      "Support Technician",
       "Security Analyst"
     ];
 
